# mql-python-converter

./: .dockerignore  .env  .env.example  .gitignore  BACKTESTING_FRAMEWORK.md  DOCKER-VARIANTS.md  Dockerfile  Dockerfile.mt4  Dockerfile.mt4-safe  Dockerfile.mt4-slim  Dockerfile.novnc  Dockerfile.secure  LICENSE  MT4_LINUX_SETUP_GUIDE.md  PythonDataBridge.mq4  README-DOCKER.md  README-NOVNC.md  README.md  SECURITY.md  cleanup-processes.sh  docker-cleanup.sh  docker-compose-novnc.yml  docker-compose.mt4.yml  docker-compose.safe.yml  docker-compose.secure.yml  docker-compose.slim.yml  docker-compose.yml  docker-entrypoint-novnc.sh  docker-entrypoint.sh  docker-rootless-setup.sh  docker-safe-run.sh  healthcheck-novnc.sh  healthcheck.sh  mt4-docker.sh  mt4_gui.sh  mt4_headless.sh  mt4_web.sh  pyproject.toml  requirements-optimization.txt  requirements.txt  (+19 more)
backtesting/: framework.py  generate_test_data.py  simple_framework.py  validate_conversion.py
backtesting/test_data/: EURUSD240.csv  EURUSD240.hst  GBPJPY240.csv  GBPJPY240.hst  GBPUSD240.csv  GBPUSD240.hst  USDJPY240.csv  USDJPY240.hst
docs/: AdaptiveLaguerre_Formulas.md  BROWSER_SETUP.md  GUI_ACCESS_GUIDE.md  NOVNC_SETUP.md  OPTIMIZATION_METHODS.md  README.md  Triple_Power_Stop_Formulas.md  adaptive_laguerre_python_docs.md  laguerre_parameter_guide.md  mt4_linux_setup.md  mt4_setup_guide.md  triple_power_stop_parameter_guide.md
docs/troubleshooting/: DOCKER-PERMISSION-ERRORS.md
examples/: __init__.py  optuna_optimization_example.py
python/: test_laguerre_simple.py
server/: mt4_server.py
tests/: test_visual_comparison.py
tools/: __init__.py
(+94 files in other folders)
